# rust-scalping

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml  mean_reversion.toml  testnet.toml
dashboard/: next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/trades/: page.tsx
dashboard/components/: ConnectionStatus.tsx  DailyStats.tsx  IndicatorPanel.tsx  PositionCard.tsx  PriceChart.tsx  RiskStatus.tsx  TradeTable.tsx
dashboard/hooks/: useApi.ts  useWebSocket.ts
docs/: DASHBOARD_AGENT_GUIDE.md  DASHBOARD_USER_GUIDE.md
src/: config.rs  main.rs
src/backtest/: data.rs  engine.rs  metrics.rs  mod.rs
src/dashboard/: handlers.rs  mod.rs  server.rs  state.rs
src/exchange/: auth.rs  client.rs  mod.rs  models.rs  websocket.rs
src/indicators/: calculator.rs  mod.rs
src/strategy/: mean_reversion.rs  mod.rs  scalping.rs  signals.rs
src/telegram/: alerts.rs  bot.rs  commands.rs  mod.rs
src/trading/: engine.rs  mod.rs  orders.rs  position.rs  risk.rs
src/utils/: logger.rs
